--- a/css/old-terminal.css
+++ b/css/old-terminal.css
@@ -55,3 +55,27 @@ button:hover {
     font-size: 1rem;
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+.password-input {
+  background-color: rgba(0, 150, 0, 0.75);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-family: Inconsolata, monospace;
+  font-size: 1rem;
+  padding: 0.75rem;
+  text-shadow: 0 0 5px #c8c8c8;
+  width: 100%;
+  box-sizing: border-box;
+}
