--- a/css/old-terminal.css
+++ b/css/old-terminal.css
@@ -144,6 +144,10 @@ body::-webkit-scrollbar-corner {
   display: none;
   padding-left: 20px;
 }
+.accordion-content4 {
+  display: none;
+  padding-left: 20px;
+}
 
 .nested-button {
   background-color: #00cc00;
